# wlmstr

./: Cargo.toml  README.md  flake.nix  test.json
.nvim/: debug.lua
src/: main.rs  status.rs
